--- a/opentalk.html
+++ b/opentalk.html
@@ -1,43 +1,47 @@
 <head>
-  <title>realtimechatawesome</title>
-  <script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-	  ga('create', 'UA-42231079-1', 'meteor.com');
-	  ga('send', 'pageview');
-
+	<title>OpenTalk</title>
+	<link rel='stylesheet' href='css/main.css'>
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="HandheldFriendly" content="True">
+	<meta name="MobileOptimized" content="320">
+	<meta http-equiv="cleartype" content="on">
+	
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		ga('create', 'UA-40201469-3', 'opentalk.me');
+		ga('send', 'pageview');
 	</script>
 </head>
 
 <body>
-	{{loginButtons}}
-	{{> selectChatRoom}}
-	<hr>
-	Step1) Sign in with a service of your choice
-	<br>
-	Step2) For testing purposes enter chatroom 1 &uarr;
-	<br>
-	Step3) Just write something, please :)
-	<hr>
-	{{> chatWindow}}
+	<div class="limit">
+		<header>
+			{{loginButtons}}
+			{{> selectChatRoom}}
+		</header>
+		<section>
+			{{> messagesList}}
+		</section>
+	</div>
 </body>
 
+
 <template name='selectChatRoom'>
-	<input type="text" id='chatRoom' placeholder='#roomID'>
+	{{#if loggedIn}}
+		<input type='text' id='roomID' placeholder='#roomID'/>
+	{{/if}}
 </template>
 
-<template name='chatWindow'>
-	{{#if enabled}}
-		<ul>
+<template name='messagesList'>
+	{{#if roomSelected}}
+		<ul class='messages'>
 			{{#each messages}}
-				<li><b>{{username}}</b>: {{text}}</li>
+				<li class='message'><b class='username'>{{username}}</b>: {{text}}</li>
 			{{/each}}
 		</ul>
-		<input type="text" id='mymessage' placeholder='just write'>
-	{{else}}
-		You have to be signed in to enter a chatRoom
+		<input type='text' id='mymessage' placeholder='just write'/>
 	{{/if}}
 </template>
