--- a/opentalk.html
+++ b/opentalk.html
@@ -62,6 +62,9 @@
 		<div class="menu">
 			<a href='#' id='deleteMyMessages' class='button silver' title='delete your messages'><span class="icon-remove"></span></a>
 		</div>
+	{{/if}}
+
+	{{#if roomSelected}}
 		<ul id="online-users">
 			<li class='usersCount'>
 				<span href='#'>{{usersCount}}</span>
@@ -70,6 +73,8 @@
 				<li class="online">{{username}}</li>
 			{{/each}}
 		</ul>
+	{{/if}}
+	{{#if loggedIn}}
 		<ul class='messages'>
 			{{#each messages}}
 				<li class='message'><b class='username'>{{user}}</b>: {{text}}</li>
