--- a/opentalk.html
+++ b/opentalk.html
@@ -54,7 +54,7 @@
 
 
 <template name='selectChatRoom'>
-	<input type='text' id='roomid' class='input-light {{#if roomSelected}}change{{/if}}' value='{{selectedRoom}}' placeholder='room'/>
+	<input type='text' id='room' class='input-light {{#if roomSelected}}change{{/if}}' value='{{selectedRoom}}' placeholder='room'/>
 </template>
 
 <template name='messagesList'>
