--- a/opentalk.html
+++ b/opentalk.html
@@ -37,7 +37,7 @@
 
 <template name="roomSelected">
 	{{#if loggedIn}}
-		<span class="user">{{username}}</span> {{>logout}}
+		<img src="{{avatar}}" alt="" class="avatar"/><span class="user">{{username}}</span> {{>logout}}
 	{{else}}
 		{{loginButtons}} <span class="or">or</span> {{>pickNickname}}
 	{{/if}}
