--- a/client/templates.html
+++ b/client/templates.html
@@ -1,33 +1,3 @@
-<head>
-	<title>OpenTalk</title>
-	<link rel='stylesheet' href='css/main.css'>
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="HandheldFriendly" content="True">
-	<meta name="MobileOptimized" content="320">
-	<meta http-equiv="cleartype" content="on">
-	
-	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-		ga('create', 'UA-40201469-3', 'opentalk.me');
-		ga('send', 'pageview');
-	</script>
-</head>
-
-<body>
-	<div class="limit">
-		<header>
-			{{>login}} {{>selectChatRoom}}
-		</header>
-		<section role='main' class='main'>
-			{{renderPage}}
-		</section>
-	</div>
-
-</body>
-
 <template name='login'>
 	{{#if roomSelected}}
 		{{>roomSelected}}
@@ -54,7 +24,7 @@
 
 
 <template name='selectChatRoom'>
-	<input type='text' id='roomid' class='input-light {{#if roomSelected}}change{{/if}}' value='{{selectedRoom}}' placeholder='room'/>
+	<input type='text' id='roomid' value='{{selectedRoom}}' placeholder='room'/>
 </template>
 
 <template name='messagesList'>
@@ -86,6 +56,27 @@
 	{{/if}}
 </template>
 
-<template name='about'>
-	test
+<template name="welcome">
+	<div class="blanket medium-text">
+		<span class='vam'>Join the conversation at</span> <span class="vam">{{>selectChatRoom}}</span>
+	</div>
+	<div class="welcome-mast">
+		<div class="welcome-mast-cont">
+			<h1>opentalk.me</h1>
+		</div>
+	</div>
+</template>
+
+<template name="room">
+	<aside class="fixed-sidebar">
+		this
+		<br>
+		is
+		<br>
+		the
+		<br>
+		fixed
+		<br>
+		sidebar
+	</aside>
 </template>
