good ux, some fixes, loggedIn and stuff

--- a/client/templates.html
+++ b/client/templates.html
@@ -1,28 +1,7 @@
-<template name='pickNickname'>
-	<span class="vam">Pick a nickname to join</span>
-	<input type="text" id='nickname' class='vam' placeholder='trasher666'>
-</template>
-
-<template name='logout'>
-	<a href="#" id='logout' class='button silver' title='Log out'>Log out</span></a>
-</template>
-
 <template name='selectChatRoom'>
 	<input type='text' id='roomid' placeholder='enter room'/>
 </template>
 
-<template name='messages'>
-	{{#if loggedIn}}
-		<ul class='messages'>
-			{{#each messages}}
-				<li class='message'><b class='username'>{{username}}</b>: {{text}}</li>
-			{{/each}}
-			<li id='li-message'>
-				<textarea id="mymessage"  rows="1" placeholder='your message'/>
-			</li>
-		</ul>
-	{{/if}}
-</template>
 
 <template name="welcome">
 	<div class="blanket medium-text">
@@ -35,6 +14,27 @@
 	</div>
 </template>
 
+<template name='pickNickname'>
+	<div class="blanket-white">
+		<span class="vam">Pick a nickname to join </span> <input type="text" id='nickname' placeholder='trasher666'>
+	</div>
+</template>
+
+<template name='logout'>
+	<a href="#" id='logout' class='button silver' title='Log out'>Log out</span></a>
+</template>
+<template name='messages'>
+	<ul class='messages'>
+		{{#each messages}}
+			<li class='message'><b class='username'>{{username}}</b>: <span>{{text}}</span></li>
+		{{/each}}
+		{{#if loggedIn}}
+			<li id='li-message'>
+				<textarea id="mymessage" rows="1" placeholder='your message'/>
+			</li>
+		{{/if}}
+	</ul>
+</template>
 <template name="room">
 	<aside class="fixed-sidebar">
 		{{#if loggedIn}}
@@ -53,7 +53,6 @@
 			{{/each}}
 		</ul>
 	</aside>
-	
 	<div class="main">
 		{{#unless loggedIn}}
 			{{>pickNickname}}
@@ -61,5 +60,4 @@
 		
 		{{>messages}}
 	</div>
-	
 </template>
