sidebar toggle, js fixes,rwd

--- a/client/templates.html
+++ b/client/templates.html
@@ -36,6 +36,7 @@
 	</ul>
 </template>
 <template name="room">
+	<div class="toggle-sidebar"></div>
 	<aside class="fixed-sidebar">
 		{{#if loggedIn}}
 			<div class="userinfo">
