fastclick,swipe,and other cool stuff

--- a/client/templates.html
+++ b/client/templates.html
@@ -36,7 +36,7 @@
 	</ul>
 </template>
 <template name="room">
-	<div class="toggle-sidebar"></div>
+	<div class="toggle-sidebar"><span class="icon-arrow left"></span></div>
 	<aside class="fixed-sidebar">
 		{{#if loggedIn}}
 			<div class="userinfo">
