--- a/client/opentalk.html
+++ b/client/opentalk.html
@@ -1,7 +1,7 @@
 <head>
 	<title>OpenTalk</title>
 	<link rel='stylesheet' href='css/main.css'>
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="HandheldFriendly" content="True">
 	<meta name="MobileOptimized" content="320">
 	<meta http-equiv="cleartype" content="on">
