--- a/client/templates.html
+++ b/client/templates.html
@@ -18,6 +18,7 @@
 <template name='pickNickname'>
 	<div class="blanket-white">
 		<span class="vam">Pick a nickname to join </span> <input type="text" id='nickname' placeholder='trasher666'>
+		{{loginButtons}}
 	</div>
 </template>
 
