textarea, login fixed

--- a/client/templates.html
+++ b/client/templates.html
@@ -32,7 +32,7 @@
 		{{/each}}
 		{{#if loggedIn}}
 			<li id='li-message'>
-				<textarea id="mymessage" placeholder='your message'/>
+				<textarea id="mymessage" rows='1' placeholder='your message'/>
 			</li>
 		{{/if}}
 	</ul>
