--- a/client/templates.html
+++ b/client/templates.html
@@ -53,7 +53,7 @@
 					<span class="nickname">{{username}}</span>
 				</div>
 				{{>logout}}
-				<a href="#" id='toggleRealtime' class='button silver' title='toggleRealtime'><span class="status-badge {{realtimeEnabled}}"></span> realtime</a>
+				<a href="#" id='toggleRealtime' class='button silver' title='toggleRealtime'><span class="status-badge {{realtimeEnabled}}"></span><img src="/images/realtime.png" alt="realtime" class='realtime-image'></a>
 			{{/if}}
 		{{/isolate}}
 		{{#isolate}}
