--- a/client/opentalk.html
+++ b/client/opentalk.html
@@ -1,10 +1,13 @@
 <head>
+	<meta name="fragment" content="!">
 	<title>OpenTalk</title>
-	<link rel='stylesheet' href='css/main.css'>
+	<meta name="description" content="Monocle is a community focused around technology and startups">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="HandheldFriendly" content="True">
 	<meta name="MobileOptimized" content="320">
 	<meta http-equiv="cleartype" content="on">
+
 
 <!--
 <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400' rel='stylesheet' type='text/css'>
