--- a/client/templates.html
+++ b/client/templates.html
@@ -37,7 +37,9 @@
 
 <template name="message">
 	{{#if messageComplete}}
+		{{#constant}}
 			<li class='message'><img src="{{useravatar}}" alt="" class="useravatar"><b class='username'>{{username}}:</b><span class='text'>{{{text}}}</span></li>
+		{{/constant}}
 	{{else}}
 		<li class='message realtime'><img src="{{useravatar}}" alt="" class="useravatar"><b class='username'>{{username}}:</b><span class='text'>{{{text}}}</span></li>
 	{{/if}}
@@ -46,7 +48,6 @@
 	<ul class='messages'>
 		{{#each messages}}
 				{{>message}}
-			
 		{{/each}}
 		{{#if loggedIn}}
 			<li id='li-message'>
