--- a/client/templates.html
+++ b/client/templates.html
@@ -58,7 +58,7 @@
 		<div class="online-users-count"><span>{{onlineUsersCount}}</span></div>
 	{{/isolate}}
 	<aside class="fixed-sidebar">
-		<a href="/" title='to the homepage'>
+		<a href="/" title='to the homepage' class='go-home-you-are-drunk'>
 			<img src="/images/logo_even_white.png" alt="" class="logo">
 		</a>
 		{{#isolate}}
