obgligatory backup because it kinda works

--- a/client/templates.html
+++ b/client/templates.html
@@ -47,6 +47,7 @@
 
 <template name='messages'>
 	<ul class='messages'>
+		<li id="first"></li>
 		<li id="last"></li>
 		{{#unless mymessageDisabled}}
 		<li id='li-message'>
