--- a/client/templates.html
+++ b/client/templates.html
@@ -81,6 +81,9 @@
 		{{/isolate}}
 		{{#isolate}}
 			<ul class="online-users">
+				<li class='online-users-heading'>
+					people
+				</li>
 				{{#each onlineUsers}}
 					<li class="online"><span class="status-badge {{status}}"></span><span class='online-user'>{{nickname}}</span></li>
 				{{/each}}
