--- a/client/templates.html
+++ b/client/templates.html
@@ -98,7 +98,8 @@
 		{{/isolate}}
 	</aside>
 	<div class="main">
-		<div class="loading">One sec, fetching your messages..</div>
+		<div class="load-more">older messages</div>
+		<div class="loading show-loading">One sec, fetching your messages..</div>
 
 		{{#unless loggedIn}}
 			{{>loginForm}}
