--- a/client/templates.html
+++ b/client/templates.html
@@ -76,9 +76,9 @@
 					<span class="user-username">{{username}}</span>
 				</div>
 				
-				<a href="#" id='logout' class='button silver' title='Log out'>Log out</a>
+				<a href="#" id='logout' class='button silver' title='Log out'>Log out <span class="icon-logout"></span></a>
 				<a href="#" id='toggleRealtime' class='button silver' title='toggleRealtime'>
-					<span class="status-badge {{realtimeEnabled}}"></span><img src="/images/realtime.png" alt="realtime" class='realtime-image'>
+					<span class="status-badge {{realtimeEnabled}}"></span> <span class="icon-realtime"></span>
 				</a>
 			{{/if}}
 		{{/isolate}}
