social,icons not w

--- a/client/templates.html
+++ b/client/templates.html
@@ -23,9 +23,12 @@
 			<span class="">Choose a nickname </span> <input type="text" id='nickname' placeholder='trasher666'>
 			<br>
 			<h4>or</h4>
-			<h6>sign in with</h6>
+			<h6></h6>
 			<br>
-			{{loginButtons}}
+			<a href="#" class="serviceLogin twitter"><span class="icon-twitter"></span></a>
+			<a href="#" class="serviceLogin github"><span class="icon-facebook"></span></a>
+			<a href="#" class="serviceLogin facebook"><span class="icon-google"></span></a>
+			<a href="#" class="serviceLogin google"><span class="icon-github"></span></a>
 		</div>
 	{{/unless}}
 </template>
