--- a/client/templates.html
+++ b/client/templates.html
@@ -25,10 +25,10 @@
 			<h4>or</h4>
 			<h6></h6>
 			<br>
-			<a href="#" class="serviceLogin twitter"><img src="/images/social/twitter.png" alt=""></a>
-			<a href="#" class="serviceLogin github"><img src="/images/social/github.png" alt=""></a>
-			<a href="#" class="serviceLogin facebook"><img src="/images/social/facebook.png" alt=""></a>
-			<a href="#" class="serviceLogin google"><img src="/images/social/google.png" alt=""></a>
+			<img class='serviceLogin twitter' src="/images/social/twitter.png" alt="">
+			<img class='serviceLogin github' src="/images/social/github.png" alt="">
+			<img class='serviceLogin facebook' src="/images/social/facebook.png" alt="">
+			<img class='serviceLogin google' src="/images/social/google.png" alt="">
 		</div>
 	{{/unless}}
 </template>
