--- a/client/templates.html
+++ b/client/templates.html
@@ -83,7 +83,7 @@
 					<span class="user-username">{{username}}</span>
 				</div>
 				
-				<a href="#" id='logout' class='button silver' title='Log out'>Log out <span class="icon-logout"></span></a>
+				<a href="#" id='logout' class='button silver' title='Log out'>Log out</a>
 				<a href="#" id='toggleRealtime' class='button silver' title='toggleRealtime'>
 					<span class="status-badge {{realtimeEnabled}}"></span> <span class="icon-realtime"></span>
 				</a>
