new message transition

--- a/client/templates.html
+++ b/client/templates.html
@@ -58,7 +58,7 @@
 		<li id="last"></li>
 		{{#unless mymessageDisabled}}
 		<li id='li-message'>
-			<textarea id="mymessage" rows='1' placeholder='your message'/>
+			<textarea id="mymessage" rows='1' placeholder='your message' tabindex='1'/>
 		</li>
 		{{/unless}}
 	</ul>
