got rid of loading :(

--- a/client/templates.html
+++ b/client/templates.html
@@ -107,7 +107,7 @@
 	<div class="main">
 
 
-		<div class="loading show-loading">One sec, fetching your messages..</div>
+		<div class="loading">One sec, fetching your messages..</div>
 		
 		{{>messages}}
 		
